--- a/.gitignore
+++ b/.gitignore
@@ -4,3 +4,5 @@
 /DAM_Distancia/Programacion/Tema4/PROG04_Ejerc5/PROG04_Ejerc5/target/
 /DAM_Distancia/Entornos_Desarrollo/Tema2/Tarea2/Tarea/nbproject/private/
 /DAM_Distancia/Entornos_Desarrollo/Tema2/Tarea2/Tarea/build/
+/DAM_Distancia/Programacion/Tema5/PROG05_Tarea/nbproject/private/
+/DAM_Distancia/Programacion/Tema5/PROG05_Tarea/build/
