--- a/.gitignore
+++ b/.gitignore
@@ -6,3 +6,5 @@
 /DAM_Distancia/Entornos_Desarrollo/Tema2/Tarea2/Tarea/build/
 /DAM_Distancia/Programacion/Tema5/PROG05_Tarea/nbproject/private/
 /DAM_Distancia/Programacion/Tema5/PROG05_Tarea/build/
+/DAM_Distancia/Programacion/Tema5/Practica Examen/nbproject/private/
+/DAM_Distancia/Programacion/Tema5/Practica Examen/build/
