--- a/.gitignore
+++ b/.gitignore
@@ -8,3 +8,5 @@
 /DAM_Distancia/Programacion/Tema5/PROG05_Tarea/build/
 /DAM_Distancia/Programacion/Tema5/Practica Examen/nbproject/private/
 /DAM_Distancia/Programacion/Tema5/Practica Examen/build/
+/DAM_Distancia/Programacion/Tema5/Calculadora/nbproject/private/
+/DAM_Distancia/Programacion/Tema5/Calculadora/build/
