--- a/.gitignore
+++ b/.gitignore
@@ -66,3 +66,13 @@
 /DAM_Distancia/Programacion/Clases Heredadas/build/
 /DAM_Distancia/Programacion/Prueba Herencias Examen 2/nbproject/private/
 /DAM_Distancia/Programacion/Prueba Herencias Examen 2/build/
+/DAM_Distancia/Programacion/Apuntes/Sistema de Gestion Academica/nbproject/private/
+/DAM_Distancia/Programacion/Apuntes/Sistema de Gestion Academica/build/
+/DAM_Distancia/Programacion/Apuntes/Sistema de Gestion de Biblioteca Virtual/nbproject/private/
+/DAM_Distancia/Programacion/Apuntes/Sistema de Gestion de Biblioteca Virtual/build/
+/DAM_Distancia/Programacion/Apuntes/Sistema gestion biblioteca 2/nbproject/private/
+/DAM_Distancia/Programacion/Apuntes/Sistema gestion biblioteca 2/build/
+/DAM_Distancia/Programacion/Apuntes/Gestion productos en estantería/nbproject/private/
+/DAM_Distancia/Programacion/Apuntes/Gestion productos en estantería/build/
+/DAM_Distancia/Programacion/Apuntes/Gestion Biblioteca Herencia (ej1 TC)/nbproject/private/
+/DAM_Distancia/Programacion/Apuntes/Gestion Biblioteca Herencia (ej1 TC)/build/
