--- a/.gitignore
+++ b/.gitignore
@@ -76,3 +76,5 @@
 /DAM_Distancia/Programacion/Apuntes/Gestion productos en estantería/build/
 /DAM_Distancia/Programacion/Apuntes/Gestion Biblioteca Herencia (ej1 TC)/nbproject/private/
 /DAM_Distancia/Programacion/Apuntes/Gestion Biblioteca Herencia (ej1 TC)/build/
+/DAM_Distancia/Programacion/Apuntes/Gestion de Inventario productos electronicos/nbproject/private/
+/DAM_Distancia/Programacion/Apuntes/Gestion de Inventario productos electronicos/build/
