Nueva actualizacion de los ejercicios de repaso

--- a/.gitignore
+++ b/.gitignore
@@ -78,3 +78,23 @@
 /DAM_Distancia/Programacion/Apuntes/Gestion Biblioteca Herencia (ej1 TC)/build/
 /DAM_Distancia/Programacion/Apuntes/Gestion de Inventario productos electronicos/nbproject/private/
 /DAM_Distancia/Programacion/Apuntes/Gestion de Inventario productos electronicos/build/
+/DAM_Distancia/Programacion/Apuntes/Ejercicio repaso 1/nbproject/private/
+/DAM_Distancia/Programacion/Apuntes/Ejercicio repaso 1/build/
+/DAM_Distancia/Programacion/Apuntes/Ejercicio repaso 2/nbproject/private/
+/DAM_Distancia/Programacion/Apuntes/Ejercicio repaso 2/build/
+/DAM_Distancia/Programacion/Apuntes/Ejercicio repaso 3/nbproject/private/
+/DAM_Distancia/Programacion/Apuntes/Ejercicio repaso 3/build/
+/DAM_Distancia/Programacion/Apuntes/Ejercicio repaso 4/nbproject/private/
+/DAM_Distancia/Programacion/Apuntes/Ejercicio repaso 4/build/
+/DAM_Distancia/Programacion/Apuntes/Ejercicio repaso 5/nbproject/private/
+/DAM_Distancia/Programacion/Apuntes/Ejercicio repaso 5/build/
+/DAM_Distancia/Programacion/Apuntes/Ejercicio repaso 6/nbproject/private/
+/DAM_Distancia/Programacion/Apuntes/Ejercicio repaso 6/build/
+/DAM_Distancia/Programacion/Apuntes/Ejercicio repaso 7/nbproject/private/
+/DAM_Distancia/Programacion/Apuntes/Ejercicio repaso 7/build/
+/DAM_Distancia/Programacion/Apuntes/Ejercicio repaso 8/nbproject/private/
+/DAM_Distancia/Programacion/Apuntes/Ejercicio repaso 8/build/
+/DAM_Distancia/Programacion/Apuntes/Ejercicio repaso 9/nbproject/private/
+/DAM_Distancia/Programacion/Apuntes/Ejercicio repaso 9/build/
+/DAM_Distancia/Programacion/Apuntes/Ejercicio repaso 10/nbproject/private/
+/DAM_Distancia/Programacion/Apuntes/Ejercicio repaso 10/build/
