--- a/.gitignore
+++ b/.gitignore
@@ -98,3 +98,5 @@
 /DAM_Distancia/Programacion/Apuntes/Ejercicio repaso 9/build/
 /DAM_Distancia/Programacion/Apuntes/Ejercicio repaso 10/nbproject/private/
 /DAM_Distancia/Programacion/Apuntes/Ejercicio repaso 10/build/
+/DAM_Distancia/Programacion/Apuntes/Ejercicio repaso completo 1/nbproject/private/
+/DAM_Distancia/Programacion/Apuntes/Ejercicio repaso completo 1/build/
