--- a/.gitignore
+++ b/.gitignore
@@ -100,3 +100,15 @@
 /DAM_Distancia/Programacion/Apuntes/Ejercicio repaso 10/build/
 /DAM_Distancia/Programacion/Apuntes/Ejercicio repaso completo 1/nbproject/private/
 /DAM_Distancia/Programacion/Apuntes/Ejercicio repaso completo 1/build/
+/DAM_Distancia/Programacion/Apuntes/Ejercicio Repaso Examen/nbproject/private/
+/DAM_Distancia/Programacion/Apuntes/Ejercicio Repaso Examen/build/
+/DAM_Distancia/Programacion/Apuntes/Examen Progra Junio/nbproject/private/
+/DAM_Distancia/Programacion/Apuntes/Examen Progra Junio/build/
+/DAM_Distancia/Programacion/Apuntes/Eurocoin/nbproject/private/
+/DAM_Distancia/Programacion/Apuntes/Eurocoin/build/
+/DAM_Distancia/Programacion/Apuntes/Cartas/nbproject/private/
+/DAM_Distancia/Programacion/Apuntes/Cartas/build/
+/DAM_Distancia/Programacion/Apuntes/Login/nbproject/private/
+/DAM_Distancia/Programacion/Apuntes/Login/build/
+/DAM_Distancia/Programacion/Apuntes/Botellas/nbproject/private/
+/DAM_Distancia/Programacion/Apuntes/Botellas/build/
