--- a/.gitignore
+++ b/.gitignore
@@ -112,3 +112,7 @@
 /DAM_Distancia/Programacion/Apuntes/Login/build/
 /DAM_Distancia/Programacion/Apuntes/Botellas/nbproject/private/
 /DAM_Distancia/Programacion/Apuntes/Botellas/build/
+/DAM_Distancia/Programacion/Apuntes/Clase Abstracta/nbproject/private/
+/DAM_Distancia/Programacion/Apuntes/Clase Abstracta/build/
+/DAM_Distancia/Programacion/Apuntes/Gestion de Biblioteca/nbproject/private/
+/DAM_Distancia/Programacion/Apuntes/Gestion de Biblioteca/build/
