--- a/.gitignore
+++ b/.gitignore
@@ -116,3 +116,5 @@
 /DAM_Distancia/Programacion/Apuntes/Clase Abstracta/build/
 /DAM_Distancia/Programacion/Apuntes/Gestion de Biblioteca/nbproject/private/
 /DAM_Distancia/Programacion/Apuntes/Gestion de Biblioteca/build/
+/DAM_Distancia/Programacion/Apuntes/Gestion de Notas/nbproject/private/
+/DAM_Distancia/Programacion/Apuntes/Gestion de Notas/build/
