--- a/.gitignore
+++ b/.gitignore
@@ -123,3 +123,4 @@
 /DAM_Distancia/DAM2/Desarrollo de Interfaces/T1/Ejemplo/Prueba/nbproject/private/
 /DAM_Distancia/DAM2/Desarrollo de Interfaces/T1/Ejemplo/Tarea1/nbproject/private/
 /DAM_Distancia/DAM2/Desarrollo de Interfaces/T1/Ejemplo/Tarea1/build/
+/DAM_Distancia/DAM2/Desarrollo de Interfaces/T1/Tarea1/dist/
