--- a/.gitignore
+++ b/.gitignore
@@ -124,3 +124,7 @@
 /DAM_Distancia/DAM2/Desarrollo de Interfaces/T1/Ejemplo/Tarea1/nbproject/private/
 /DAM_Distancia/DAM2/Desarrollo de Interfaces/T1/Ejemplo/Tarea1/build/
 /DAM_Distancia/DAM2/Desarrollo de Interfaces/T1/Tarea1/dist/
+/DAM_Distancia/DAM2/Programacion de Servicios y Procesos/T1/Tarea/Ejercicio 2/Letras/nbproject/private/
+/DAM_Distancia/DAM2/Programacion de Servicios y Procesos/T1/Tarea/Ejercicio 2/Letras/build/
+/DAM_Distancia/DAM2/Programacion de Servicios y Procesos/T1/Tarea/Ejercicio 2/Letras/dist/
+/DAM_Distancia/DAM2/Programacion de Servicios y Procesos/T1/Tarea/Ejercicio 2/Lenguaje/nbproject/private/
