--- a/.gitignore
+++ b/.gitignore
@@ -134,3 +134,11 @@
 /DAM_Distancia/DAM2/Desarrollo_de_Interfaces/T2/Tarea2/build/
 /DAM_Distancia/DAM2/Desarrollo_de_Interfaces/T2/SwingRepaso/nbproject/private/
 /DAM_Distancia/DAM2/Desarrollo_de_Interfaces/T2/SwingRepaso/build/
+/DAM_Distancia/DAM2/Desarrollo_de_Interfaces/T3/ProyectoTemporizador/nbproject/private/
+/DAM_Distancia/DAM2/Desarrollo_de_Interfaces/T3/ProyectoTemporizador/build/
+/DAM_Distancia/DAM2/Desarrollo_de_Interfaces/T3/ProyectoTemporizador/dist/
+/DAM_Distancia/DAM2/Desarrollo_de_Interfaces/T3/testBeans/nbproject/private/
+/DAM_Distancia/DAM2/Desarrollo_de_Interfaces/T3/testBeans/build/
+/DAM_Distancia/DAM2/Desarrollo_de_Interfaces/T3/JavaBeansTests/nbproject/private/
+/DAM_Distancia/DAM2/Desarrollo_de_Interfaces/T3/JavaBeansTests/dist/
+/DAM_Distancia/DAM2/Desarrollo_de_Interfaces/T3/JavaBeansTests/build/
