--- a/DAM_Distancia/DAM2/Desarrollo_de_Interfaces/T3/JavaBeansTests/nbproject/project.properties
+++ b/DAM_Distancia/DAM2/Desarrollo_de_Interfaces/T3/JavaBeansTests/nbproject/project.properties
@@ -28,10 +28,10 @@ debug.test.modulepath=\
 dist.archive.excludes=
 # This directory is removed when the project is cleaned:
 dist.dir=dist
-dist.jar=${dist.dir}/JavaBeansTests.jar
+dist.jar=${dist.dir}/Tarea3_DI.jar
 dist.javadoc.dir=${dist.dir}/javadoc
 dist.jlink.dir=${dist.dir}/jlink
-dist.jlink.output=${dist.jlink.dir}/JavaBeansTests
+dist.jlink.output=${dist.jlink.dir}/Tarea3_DI
 excludes=
 includes=**
 jar.compress=false
@@ -70,7 +70,7 @@ jlink.additionalmodules=
 # The jlink additional command line parameters
 jlink.additionalparam=
 jlink.launcher=true
-jlink.launcher.name=JavaBeansTests
+jlink.launcher.name=Tarea3_DI
 main.class=zonaDePruebas.ZonaPruebas
 manifest.file=manifest.mf
 meta.inf.dir=${src.dir}/META-INF
