--- a/.gitignore
+++ b/.gitignore
@@ -142,3 +142,5 @@
 /DAM_Distancia/DAM2/Desarrollo_de_Interfaces/T3/JavaBeansTests/nbproject/private/
 /DAM_Distancia/DAM2/Desarrollo_de_Interfaces/T3/JavaBeansTests/dist/
 /DAM_Distancia/DAM2/Desarrollo_de_Interfaces/T3/JavaBeansTests/build/
+DAM_Distancia/DAM2/Acceso_a_datos/T3/Actividad-3.3-Ejemplo-ficheros-xml
+DAM_Distancia/DAM2/Acceso_a_datos/T3/Actividade3.1-Hibernate-init
