Add BD_JASPER project files, including manifest, source code, and configuration; update .gitignore for build artifacts

--- a/.gitignore
+++ b/.gitignore
@@ -144,3 +144,6 @@
 /DAM_Distancia/DAM2/Desarrollo_de_Interfaces/T3/JavaBeansTests/build/
 DAM_Distancia/DAM2/Acceso_a_datos/T3/Actividad-3.3-Ejemplo-ficheros-xml
 DAM_Distancia/DAM2/Acceso_a_datos/T3/Actividade3.1-Hibernate-init
+/DAM_Distancia/DAM2/Desarrollo_de_Interfaces/T3/BD_JASPER/nbproject/private/
+/DAM_Distancia/DAM2/Desarrollo_de_Interfaces/T3/BD_JASPER/dist/
+/DAM_Distancia/DAM2/Desarrollo_de_Interfaces/T3/BD_JASPER/build/
